<resources>
    <string name="app_name">TP2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="application_name">Bluetooth Device Detector</string>
    <string name="application_developers">
        This app was developed by:\n\n
            \tLéonard Galibois\n
            \tMatis Grégoire\n
            \tAbdelkrim Nahi\n
            \tMikael Potvin\n
    </string>
    <string name="application_version">Version 1.0</string>
    <string name="swap_theme">Swap Theme</string>
    <string name="device_name">Device name</string>
    <string name="device_address">Device address</string>
    <string name="device_location">Device location</string>
    <string name="device_class">Device class</string>
    <string name="paired_devices_info">Paired devices info</string>
    <string name="toggle_favorites">Toggle favorites</string>
    <string name="favorites_off">Favorites off</string>
    <string name="favorites_on">Favorites on</string>
    <string name="comment_y_arriver">Comment y arriver</string>
</resources>