<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/favorite_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/empty_star" />

    <ImageView
        android:id="@+id/share_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/share_icon" />

    <Button
        android:id="@+id/itinerary_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/favorite_icon"
        android:layout_toStartOf="@id/share_icon"
        android:text="@string/comment_y_arriver"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/favorite_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/device_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/device_address"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/device_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/device_location"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/device_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/device_class"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/device_class"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/paired_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/paired_devices_info"
            android:textSize="20sp"/>
    </ScrollView>

</RelativeLayout>