<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_above="@id/app_developers"
        android:layout_centerInParent="true"
        android:src="@drawable/bluetooth_icon" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/application_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/app_developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:text="@string/application_developers"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_developers"
        android:layout_centerHorizontal="true"
        android:text="@string/application_version"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>